# stryke

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
docs/: config_file
example/cpp/: core_writer.cpp  csv_multifile.cpp  csv_performance.cpp  csv_sequential.cpp  csv_writer.cpp  dispatch.cpp  dispatch_date.cpp  dispatch_duplicate.cpp  dispatch_folder.cpp  main_multifile.cpp  main_performance.cpp  main_template.cpp  main_thread.cpp  merge_file.cpp  multifile.cpp  performance.cpp  reader_basic_type.cpp  reader_rainbow.cpp  reader_v2.cpp  sequential.cpp  sequential_date.cpp  sequential_duplicate.cpp  thread.cpp  writer_rainbow.cpp
example/python/: simple_datetime.py  simple_datetime_v2.py  simple_timestamp.py  simple_timestamp_v2.py  template.py  thread_timestamp.py
include/: stryke_dispatch.hpp  stryke_multifile.hpp  stryke_reader.hpp  stryke_template.hpp  stryke_thread.hpp
include/date/: date.h
include/stryke/: core.hpp  csv.hpp  date_dispatch.hpp  dispatch.hpp  dispatch_date.hpp  dispatch_folder.hpp  multifile.hpp  options.hpp  reader.hpp  sequential.hpp  sequential_date.hpp  thread.hpp  type.hpp
include/stryke/csv/: core.hpp  dispatch.hpp  multifile.hpp  sequential.hpp
include/stryke/miscellaneous/: dispatch_duplicate.hpp  sequential_duplicate.hpp
python/: .gitignore  README.md  custom_binding_example.cpp  setup.py  stryke_binding.cpp  stryke_binding.hpp
python/stryke/: __init__.py
src/: main.cpp  main_dispatch.cpp  main_dynamic.cpp  main_multifile.cpp  main_performance.cpp  main_template.cpp  main_thread.cpp  stryke.hpp  stryke_dispatch.hpp  stryke_multifile.hpp  stryke_template.hpp  stryke_thread.hpp
tests/: stryke_read_for_test.hpp  unit-multifile.cpp  unit-template.cpp  unit-thread.cpp
tests/cpp/: stryke_read_for_test.hpp  unit-dispatch-col-name.cpp  unit-dispatch-duplicate-col-name.cpp  unit-dispatch-duplicate-timestampnumber.cpp  unit-dispatch-folder-encoding.cpp  unit-dispatch-folder.cpp  unit-dispatch-split.cpp  unit-dispatch-timestampnumber.cpp  unit-multifile-datenumber.cpp  unit-multifile-timestampnumber.cpp  unit-sequential-closing.cpp  unit-sequential-col-name.cpp  unit-sequential-duplicate-col-name.cpp  unit-sequential-duplicate-datenumber.cpp  unit-sequential-duplicate-timestampnumber.cpp  unit-template-batch.cpp  unit-template-col-name.cpp  unit-template-folder-creation.cpp  unit-template-impl.cpp  unit-template-lock.cpp  unit-template-type.1.cpp  unit-template-type.cpp  unit-template.cpp  unit-thread-folder-encoding.cpp  unit-thread-writer.cpp  unit-thread.cpp  utils_for_test.hpp
tests/python/: test_option.py  test_template.py  test_template_type.py
